# simple_rviz_plugin

./: .travis.yml  README.md
simple_node/: CMakeLists.txt  package.xml
simple_node/config/: robot_state_visualize.rviz
simple_node/launch/: simple_node_rviz.launch
simple_node/src/: simple_node.cpp
simple_node/srv/: SendOffset.srv
simple_rviz_plugin/: CMakeLists.txt  package.xml  plugin_description.xml
simple_rviz_plugin/src/: simple_panel.cpp  simple_panel.h  simple_panel_widget.cpp  simple_panel_widget.h  x_widget.cpp  x_widget.h  y_widget.cpp  y_widget.h  z_widget.cpp  z_widget.h
