<?xml version="1.0"?>
<package>
  <name>simple_rviz_plugin</name>
  <version>0.0.1</version>
  <description>Simple RViz plugin.</description>
  <author>Victor Lamoine</author>
  <maintainer email="victor.lamoine@gmail.com">Victor Lamoine</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rviz</build_depend>
  <build_depend>simple_node</build_depend>

  <run_depend>rviz</run_depend>
  <run_depend>simple_node</run_depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
